--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vscode-uri": "^3.0.7"
+  },
+  "dependencies": {
+    "bats": "^1.10.0"
   }
 }
