--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "publisher": "dgrdev",
   "author": "David Rosenberg",
   "engines": {
-    "vscode": "^1.80.0"
+    "vscode": "^1.81.0"
   },
   "categories": [
     "Other"
@@ -18,15 +18,12 @@
   "bugs": {
     "url": "https://github.com/targendaz2/bats-test-explorer/issues"
   },
-  "activationEvents": [],
+  "activationEvents": [
+    "workspaceContains:**/*.bats"
+  ],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [
-      {
-        "command": "bats-test-explorer.helloWorld",
-        "title": "Hello World"
-      }
-    ]
+    "commands": []
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -37,20 +34,19 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
-    "@types/vscode": "^1.80.0",
+    "@types/vscode": "^1.81.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vscode/test-electron": "^2.3.2",
+    "chai": "^4.3.7",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "typescript": "^5.1.3",
     "vscode-uri": "^3.0.7"
-  },
-  "dependencies": {
-    "bats": "^1.10.0"
   }
 }
