--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "activationEvents": [
     "workspaceContains:**/*.bats"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/src/extension.js",
   "contributes": {
     "commands": []
   },
@@ -38,10 +38,10 @@
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
-    "@types/vscode": "^1.81.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vscode/test-electron": "^2.3.2",
+    "@types/vscode": "^1.81.0",
     "chai": "^4.3.7",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
