--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "vscode": "^1.81.0"
   },
   "categories": [
-    "Other"
+    "Testing"
+  ],
+  "keywords": [
+    "bash",
+    "bats",
+    "bats-core"
   ],
   "repository": {
     "type": "git",
@@ -38,14 +43,17 @@
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
+    "@types/tmp": "^0.2.3",
+    "@types/vscode": "^1.81.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vscode/test-electron": "^2.3.2",
-    "@types/vscode": "^1.81.0",
     "chai": "^4.3.7",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
+    "prettier": "^3.0.1",
+    "tmp-promise": "^3.0.3",
     "typescript": "^5.1.3",
     "vscode-uri": "^3.0.7"
   }
