--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,11 @@
         "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
+        "quotes": ["warn", "single"],
+        "sort-imports": ["warn", {
+            "ignoreCase": true,
+            "allowSeparatedGroups": true
+        }],
         "semi": "off"
     },
     "ignorePatterns": [
